--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,6 @@
 version: 2
-
 jobs:
-  checkout_code:
+  build:
     docker:
       - image: circleci/ruby:2.4-node
     working_directory: ~/google-test-example-ruby
